--- a/app/src/main/res/values-night/splash.xml
+++ b/app/src/main/res/values-night/splash.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Configuring Splash API for customizing Splash-Screen UI -->
+    <!-- Configuring Splash API for customizing Splash-Screen UI in Night-Mode -->
     <style name="App.SplashScreen.Theme" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">@color/gray_50</item>
+        <item name="windowSplashScreenBackground">@color/gray_900</item>
         <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher</item>
         <item name="postSplashScreenTheme">@style/Theme.InstaLens</item>
     </style>
