--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,9 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="gray_50">#FFFAFAFA</color>
-    <color name="gray_900">#FF212121</color>
+    <color name="gray_900">#212121</color>
+
+    <!-- Text Colors -->
+    <color name="text_title">#FFFFFF</color>
+    <color name="text_body">#E0E0E0</color>
 </resources>
