--- a/app/src/main/res/values-night/splash.xml
+++ b/app/src/main/res/values-night/splash.xml
@@ -3,7 +3,8 @@
     <!-- Configuring Splash API for customizing Splash-Screen UI in Night-Mode -->
     <style name="App.SplashScreen.Theme" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/gray_900</item>
-        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_splash</item>
+        <item name="windowSplashScreenAnimationDuration">2000</item>
         <item name="postSplashScreenTheme">@style/Theme.InstaLens</item>
     </style>
 </resources>
