--- a/app/src/main/res/values/splash.xml
+++ b/app/src/main/res/values/splash.xml
@@ -3,7 +3,7 @@
     <!-- Configuring Splash API for customizing Splash-Screen UI -->
     <style name="App.SplashScreen.Theme" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/gray_50</item>
-        <item name="windowSplashScreenAnimatedIcon">@mipmap/ic_launcher</item>
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_splash</item>
         <item name="postSplashScreenTheme">@style/Theme.InstaLens</item>
     </style>
 </resources>
